--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -1601,8 +1601,8 @@ possible to address a sensor directly using its \gls{uuid}.
 capabilities}\label{merging-the-sensor-capabilities}}
 
 \begin{longtable}[]{@{}llll@{}}
-\caption{Sensor capabilities merging
-\label{Sensor_capabilities_merging.csv}}\tabularnewline
+\caption{Sensor capabilities merging algorithm
+\label{Sensor_capabilities_merging_algorithm.csv}}\tabularnewline
 \toprule
 SENSOR A & SENSOR B & MERGED CAPABILITIES & CAPABLE SENSORS ID
 LUT\tabularnewline
@@ -1625,9 +1625,9 @@ These are used to select the appropriate measurement mode for a
 measurement. For this purpose, the \passthrough{\lstinline!info!}
 command of each sensor is queried. This information is added to the
 previously created \gls{lut}. Duplicate entries are summarized (see
-Table \ref{Sensor_capabilities_merging.csv}) and returned to the host
-when the \passthrough{\lstinline!info!} \ref{lst:mtsc} command is
-received over network.
+Table \ref{Sensor_capabilities_merging_algorithm.csv}) and returned to
+the host when the \passthrough{\lstinline!info!} \ref{lst:mtsc} command
+is received over network.
 
 \begin{lstlisting}[language=bash, caption={MRPproxy REST enpoiint query examples}, label=lst:mtsc]
 # QUERY Network-Proxy capabilities
