--- a/documentation/thesis/thesis_titleinformation.tex
+++ b/documentation/thesis/thesis_titleinformation.tex
@@ -4,11 +4,11 @@
 \studiengang{Information Systems Engineering}
 \vertiefung{}
 \titel{Development of a hardware and software framework for the automated characterization
-of permanent magnets for low-field MRI systemsg}
+of permanent magnets for low-field MRI systems}
 \autor{Marcel Werner Heinrich Friedrich Ochsendorf}
 \matrnr{3120232}
 \betreuer{Prof. Dr.-Ing. Thomas Dey}
 \cobetreuer{Prof. Dr.-Ing. Volkmar Schulz}
 \extbetreuer{}
-\datum{01.01.2024}
+\datum{15.01.2024}
 \dank{}
