--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -1427,7 +1427,7 @@ are compatible with class instances of
 \item
   \passthrough{\lstinline!variance!} - Variance
 \item
-  \passthrough{\lstinline!center\_of\_gravity!} - Center of gravity
+  \passthrough{\lstinline!CoG!} - Center of gravity
 \item
   \passthrough{\lstinline!binning!} - Distribution of a sample by means
   of a histogram
@@ -1477,14 +1477,16 @@ sensors available in the network are available to the
 
 \begin{figure}
 \centering
-\includegraphics{./generated_images/border_mrp_proxy_multi.png}
-\caption{mrp proxy multi \label{mrp_proxy_multi.png}}
+\includegraphics{./generated_images/border_Example_MRP_proxy_module_usage,_using_two_remote_(+pc)s.png}
+\caption{Example MRP proxy module usage, using two remote \gls{pc}s
+\label{Example_MRP_proxy_module_usage,_using_two_remote_(+pc)s.png}}
 \end{figure}
 
-The figure \ref{mrp_proxy_multi.png} shows the modified
-\passthrough{\lstinline!multi-proxy - multi-sensor!} topology. Here,
-both proxy instances do not communicate directly with the
-\passthrough{\lstinline!control!} \gls{pc}, but the proxy instance
+The figure
+\ref{Example_MRP_proxy_module_usage,_using_two_remote_(+pc)s.png} shows
+the modified \passthrough{\lstinline!multi-proxy - multi-sensor!}
+topology. Here, both proxy instances do not communicate directly with
+the \passthrough{\lstinline!control!} \gls{pc}, but the proxy instance
 \passthrough{\lstinline!remote!}\gls{pc} \passthrough{\lstinline!\#2!}
 can acces the proxy running on \passthrough{\lstinline!remote!}\gls{pc}
 \passthrough{\lstinline!\#1!}.
@@ -2008,7 +2010,7 @@ more than 100 lines of new Python code.
 Although such examples are provided in the documentation, it must be
 possible for programming beginners in particular to use them. To
 simplify these tasks, a \gls{cli}
-\ref{example_measurement_analysis_pipeline.png} was implemented. The
+\ref{Example_measurement_analysis_pipeline.png} was implemented. The
 libaray \gls{cli} implements the following functionalities:
 
 \begin{itemize}
@@ -2074,15 +2076,15 @@ or graphical plot outputs.
 
 \begin{figure}
 \centering
-\includegraphics{./generated_images/border_example_measurement_analysis_pipeline.png}
-\caption{example measurement analysis pipeline
-\label{example_measurement_analysis_pipeline.png}}
+\includegraphics{./generated_images/border_Example_measurement_analysis_pipeline.png}
+\caption{Example measurement analysis pipeline
+\label{Example_measurement_analysis_pipeline.png}}
 \end{figure}
 
 For this purpose, a further \gls{cli} application was created, which
 enables the user to create and execute complex evaluation pipelines for
 measurement data without programming. The example
-\ref{example_measurement_analysis_pipeline.png} shows a typical
+\ref{Example_measurement_analysis_pipeline.png} shows a typical
 measurement data analysis pipeline, which consists of the following
 steps:
 
@@ -2119,7 +2121,7 @@ functions available to the user. To simplify use, a pre-defined list of
 verified functions for use in pipelines is listed in the documentation
 \cite{MagneticReadoutProcessingReadTheDocs}. The following pipeline
 definition \ref{lst:mrpuddp_example_yaml} shows the previously defined
-steps \ref{example_measurement_analysis_pipeline.png} as
+steps \ref{Example_measurement_analysis_pipeline.png} as
 \passthrough{\lstinline!yaml!} syntax.
 
 \begin{lstlisting}[caption={Example YAML code of an user defined processing pipeline with six stages linked together}, label=lst:mrpuddp_example_yaml]
@@ -2191,7 +2193,7 @@ execution sequence can be determined in the form of a call tree
 \ref{Example_result_of_an_step_execution_tree_from_user_defined_processing_pipeline.png}.
 The individual steps are then executed along the graph. The intermediate
 results and the final results
-\ref{pipeline_output_files_after_running_example_pipeline_on_a_set_of_readings.png}
+\ref{Pipeline_output_files_after_running_example_pipeline_on_a_set_of_readings.png}
 are saved for optional later use.
 
 \begin{figure}
@@ -2204,10 +2206,10 @@ processing pipeline
 
 \begin{figure}
 \centering
-\includegraphics{./generated_images/border_pipeline_output_files_after_running_example_pipeline_on_a_set_of_readings.png}
-\caption{pipeline output files after running example pipeline on a set
+\includegraphics{./generated_images/border_Pipeline_output_files_after_running_example_pipeline_on_a_set_of_readings.png}
+\caption{Pipeline output files after running example pipeline on a set
 of readings
-\label{pipeline_output_files_after_running_example_pipeline_on_a_set_of_readings.png}}
+\label{Pipeline_output_files_after_running_example_pipeline_on_a_set_of_readings.png}}
 \end{figure}
 
 \hypertarget{testing}{%
@@ -2577,24 +2579,29 @@ the imported measurements from the
 \ref{lst:pipeline_mrp_evaluation_yaml} and the optional
 \passthrough{\lstinline!IP\_return\_count!} parameter specifies the
 number of best measurements that are returned. The return parameter is a
-list of measurements and should contain the measurements that are
-closest to the mean value of all measurements after the function has
-been executed.
+list of measurements containing the most similar measurements, measured
+by the smallest distance between all measurements. The distance for each
+measurement is determined using the center of gravity function
+\passthrough{\lstinline!CoG!}, the length is then calculated from the
+result vector. This value can then be used for sorting.
 
 \begin{lstlisting}[language=Python, caption={User implemented custom find most similar readings algorithm}, label=lst:custom_find_similar_values_algorithm]
 @staticmethod
 def FindSimilarValuesAlgorithm(_readings: [MRPReading.MRPReading], IP_return_count: int = -1) -> [MRPReading.MRPReading]:
   import heapq
+  import math
   heap = []
   # SET RESULT VALUE COUNT
   IP_return_count = max([int(IP_return_count),len(_readings)])
   if IP_return_count < 0:
       IP_return_count = len(_readings) / 5
-  # CALCULATE TARGET VALUE: MEAN FROM ALL VALUES
+  # CALCULATE TARGET VALUE: CENTER OF GRAVITY MAGNITUDE FOR ALL READINGS
   target_value = 0.0
   for idx, r in enumerate(_readings):
-      mean: float = MRPAnalysis.MRPAnalysis.calculate_mean(r)
-      target_value = target_value + mean
+      cog_vecotr = MRPAnalysis.MRPAnalysis.calculate_center_of_gravity(r)
+      # COMPUTE LENGTH OF VECTOR
+      cog:float = math.sqrt(cog[0]**2 + cog[1]**2 cog[2]**2)
+      target_value = target_value + cog
   target_value = target_value / len(_readings)
   # PUSH READINGS TO HEAP
   for value in _readings:
@@ -2605,13 +2612,14 @@ def FindSimilarValuesAlgorithm(_readings: [MRPReading.MRPReading], IP_return_cou
   similar_values = [item[1] for item in heapq.nsmallest(IP_return_count, heap)]
   # CLEAN UP USED LIBRARIES AND RETURN RESULT
   del heapq
+  del math
   return similar_values
 \end{lstlisting}
 
 The Python \passthrough{\lstinline!heapq!} \cite{heapq} module,
 which implements a priority queue, is used for this purpose. The
-calculated distances from the mean value of the measurements to the
-global mean value are inserted into this queue. Subsequently, as many
+calculated distances from the \passthrough{\lstinline!CoG!} value of the
+measurements to are inserted into this queue. Subsequently, as many
 elements of the queue are returned as defined by the
 \passthrough{\lstinline!IP\_return\_count!} parameter. The actual
 sorting was carried out by the queue in the background.
@@ -2623,7 +2631,7 @@ Pipeline}\label{execution-of-analysis-pipeline}}
 Once the filter function has been implemented, it still needs to be
 integrated into the analysis
 pipeline\ref{lst:pipeline_mrp_evaluation_yaml}. Here, the example
-pipeline \ref{example_measurement_analysis_pipeline.png} is simplified
+pipeline \ref{Example_measurement_analysis_pipeline.png} is simplified
 and an additional stage \passthrough{\lstinline!find\_similar\_values!}
 has been added, which has set
 \passthrough{\lstinline!FindSimilarValuesAlgorithm!} as the function to
@@ -2680,29 +2688,38 @@ $ MRPudpp pipeline run
 > Process finished with exit code 0
 \end{lstlisting}
 
-The figure \ref{MRP_evaluation_result.png} shows this result. The plot
-of the raw measured values is shown on the left. The variance of the
-determined \passthrough{\lstinline!Mean [uT]!} mean values is plotted on
-ten individual measured values. Here it can be seen that there are
-measured values with larger deviations (see measurement
+The figure
+\ref{MRP_evaluation_result_after_execution_of_the _user_defined_pipeline,_using_find_similar_values_algorithm.png}
+shows this result. The plot of the raw measured values is shown on the
+left. The value of the determined \passthrough{\lstinline!GoG [uT]!}
+values is plotted on ten individual measured values. Here it can be seen
+that there are measured values with larger deviations (see measurement
 \passthrough{\lstinline!7:0!},\passthrough{\lstinline!10-2:0!},\passthrough{\lstinline!10-1:0!}).
 
 \begin{figure}
 \centering
-\includegraphics{./generated_images/border_MRP_evaluation_result.png}
-\caption{MRP evaluation result \label{MRP_evaluation_result.png}}
+\includegraphics{./generated_images/border_MRP_evaluation_result_after_execution_of_the _user_defined_pipeline,_using_find_similar_values_algorithm.png}
+\caption{MRP evaluation result after execution of the user defined
+pipeline, using find similar values algorithm
+\label{MRP_evaluation_result_after_execution_of_the _user_defined_pipeline,_using_find_similar_values_algorithm.png}}
 \end{figure}
 
-On the right-hand side \ref{MRP_evaluation_result.png}, the measured
-values are plotted as a result of the filter algorithm. As the
-\passthrough{\lstinline!IP\_return\_count!} parameter was set to four,
-only the four most similar measurements were exported here. It can be
-seen from the plotted mean values \passthrough{\lstinline!Mean [uT]!}
-that these are closest to the global mean value 208.8uT. The filter
-algorithm implemented by the user was thus successfully executed using
-the user-programmable pipeline. The calculation result was successfully
-verified using raw measurement data and the final result of the
-algorithm.
+On the right-hand side
+\ref{MRP_evaluation_result_after_execution_of_the _user_defined_pipeline,_using_find_similar_values_algorithm.png},
+the measured values are plotted as a result of the filter algorithm. As
+the \passthrough{\lstinline!IP\_return\_count!} parameter was set to
+four, only the four most similar measurements were exported here. It can
+be seen from the plotted \passthrough{\lstinline!CoG [uT]!} deviation
+values, that these are closest to an ideal Magnet with a
+\passthrough{\lstinline!CoG!} value of 0uT. This ideal value was
+calculated with the function
+\passthrough{\lstinline!MRP.MRPSimulation.generate\_simulated\_reading!},
+with the same measurement parameters (magnet type, dimensions, sensor
+distance) as they correspond to the mechanical structure of the used
+hardware sensor \ref{d-fullsphere}. The filter algorithm implemented by
+the user was thus successfully executed using the user-programmable
+pipeline. The calculation result was successfully verified using raw
+measurement data and the final result of the algorithm.
 
 \hypertarget{conclusion-and-dicussion}{%
 \chapter{Conclusion and Dicussion}\label{conclusion-and-dicussion}}
